# chawork

./: .gitignore  .gitmodules  CONTRIBUTING.md  NOTICE  README.md  README.zh-CN.md  components.json  package.json  pnpm-lock.yaml  tailwind.config.ts  tsconfig.json  vite.config.ts
.cargo/: config.toml
.github/: CODEOWNERS
.github/workflows/: ci.yml
backend/: Cargo.toml  tauri.conf.json  tauri.macos-arm64-release.conf.json  tauri.windows-release.conf.json
backend/capabilities/: default.json
backend/icons/: icon.icns
backend/src/: constants.rs  lib.rs  main.rs  mcp_server.rs  path_safety.rs  state.rs
backend/src/commands/: domain_pack.rs  dream.rs  employee.rs  global_settings.rs  http_server.rs  hub.rs  import.rs  mcp_tool.rs  mod.rs  ota.rs  proposal.rs  qmd.rs  runtime.rs  session.rs  skill.rs  workspace.rs  workspace_config.rs
backend/src/http_server/: mod.rs  routes.rs
backend/src/http_server/handlers/: chat_stream.rs  mod.rs
backend/src/runtime/: dream_session.rs  events.rs  lifecycle.rs  mod.rs  process.rs  process_policy.rs  session.rs
backend/src/runtime/session/: connection.rs  lifecycle.rs  pending_requests.rs  projection.rs  turn_driver.rs  turn_driver_tests.rs
backend/src/services/: context_builder.rs  domain_pack.rs  dream.rs  dream_phase1.rs  dream_scheduler.rs  employee.rs  github_client.rs  global_provider.rs  hardening_regression.rs  hub_client.rs  hub_install.rs  hub_state.rs  import.rs  iteration.rs  mcp_tool.rs  mod.rs  parser.rs  proposal.rs  provider.rs  qmd_index.rs  root_workspace.rs  session.rs  skill.rs  tool_policy.rs  ui_locale.rs  wiki_generator.rs  workspace.rs
backend/windows/: nsis-hooks.nsh
frontend/: App.tsx  index.html  main.tsx  styles.css
frontend/hooks/: useCodexEvents.ts  useDreamEvents.ts  useRuntimeLifecycleEvents.ts  useUiLabel.ts  useWorkspace.ts
scripts/: init-chawork-runtime-submodule.sh  macos-install-smoke.sh  macos-smoke.sh  prepare-macos-arm64-sidecars.sh  prepare-windows-sidecars.ps1  windows-smoke.ps1
(+130 files in other folders)
