[package]
name = "chawork"
version = "0.1.0"
edition = "2021"
license = "Apache-2.0"
description = "ChaWork desktop backend and workspace services."
repository = "https://github.com/chaworkAI/chawork"
homepage = "https://github.com/chaworkAI/chawork"
default-run = "chawork"

[[bin]]
name = "chawork-mcp-server"
path = "src/bin/mcp_server.rs"

[[bin]]
name = "seed_dream_demo"
path = "src/bin/seed_dream_demo.rs"

[[bin]]
name = "migrate_dream_schedules"
path = "src/bin/migrate_dream_schedules.rs"

[lib]
name = "chawork_lib"
crate-type = ["lib", "cdylib", "staticlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["protocol-asset"] }
tauri-plugin-dialog = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
serde_yaml = "0.9"
toml = "0.8"
tokio = { version = "1", features = ["full"] }
uuid = { version = "1", features = ["v4"] }
chrono = { version = "0.4", features = ["serde"] }
anyhow = "1"
dirs = "6"
sha2 = "0.10"
qmd = { git = "https://github.com/xucailiang/qmd", rev = "2fccc787013e19c0bf048d74570b716d87f00360", package = "qmd" }
calamine = "0.30"
csv = "1.3"
pulldown-cmark = { version = "0.13", default-features = false, features = ["html"] }
pdf-extract = "0.10"
zip = { version = "5", default-features = false, features = ["deflate"] }
quick-xml = "0.39"
axum = "0.8"
tower-http = { version = "0.6", features = ["cors"] }
tokio-stream = "0.1"
futures = "0.3"
reqwest = { version = "0.12", default-features = false, features = ["rustls-tls", "stream", "json", "gzip", "brotli", "deflate"] }
base64 = "0.22"
qbsdiff = "1.4.4"
flate2 = "1.1.9"
tar = "0.4.46"
url = "2.5.8"

[target."cfg(not(any(target_os = \"android\", target_os = \"ios\")))".dependencies]
tauri-plugin-updater = "2"
tauri-plugin-process = "2"

[dev-dependencies]
tempfile = "3"
tauri = { version = "2", features = ["test"] }
